--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
